# UsesGtest

./: CMakeLists.txt  sources.cmake
inc/: Point.h
src/: main.cpp
